--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -56,6 +56,7 @@ $small-w: 500px;
 /* Global */
 html {
 	margin: 0 !important;
+	overflow-x: hidden;
 }
 body {
 	position: relative;
@@ -64,6 +65,7 @@ body {
 
   	@include f-r;
   	font-size: 18px;
+	overflow-x: hidden;
 }
 
 a {
